# model-tools

./: blueripple-model-tools.cabal  cabal.project
src/BlueRipple/Model/: CategorizeElection.hs  PostStratify.hs  StanTools.hs  TurnoutAdjustment.hs
