cabal-version: 3.0

name:           blueripple-model-tools
version:        0.1.0.0
synopsis:       various modeling tools
category:       Data
homepage:       https://github.com/blueripple/model-tools#readme
bug-reports:    https://github.com/blueripple/model-tools/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/model-tools

library
  exposed-modules: BlueRipple.Model.CategorizeElection, BlueRipple.Model.PostStratify, BlueRipple.Model.TurnoutAdjustment
  hs-source-dirs: src
  ghc-options: -Wall -O2 -fno-warn-unused-top-binds -funbox-strict-fields
  build-depends:
     blueripple-small-data-sets
   , blueripple-data-types
   , array >= 0.5 && < 0.6
   , Frames >= 0.7 && < 0.8
   , Frames-utils >= 0.3.1
   , Frames-streamly >= 0.2
   , Frames-serialize >= 0.1.0
   , base >=4.12.0 && <5
   , containers >=0.5.0 && <0.8
   , directory >=1.3.3.0 && <1.4.0.0
   , exceptions >=0.10.4 && <0.11
   , foldl >= 1.4 && < 1.5
   , hmatrix-nlopt >= 0.2 && < 0.3
   , knit-haskell >= 0.8 && < 0.11
   , map-reduce-folds >= 0.1.1.1 && < 0.2
   , nonlinear-optimization-ad >= 0.2.4 && < 0.3
   , Frames-map-reduce >= 0.4 && < 0.5
   , mtl >= 2.2 && < 2.4
   , relude >= 1.0.0 && < 1.3
   , text >=1.2.3 && < 2.2
   , vector >= 0.12 && < 0.14
   , vinyl >= 0.13 && < 0.15

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
